# legow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yaml  publish.yaml
legow/: __init__.py
legow/configs_librairy/: configs_classifiers.py  configs_metrics.py
legow/data/: README.md  tabular_dataset.py  torch_dataset.py
legow/experiments/: README.md  __init__.py  base_experiment.py  crossval_experiment.py
legow/experiments/utils/: __init__.py  instantiate.py
legow/graphs/: README.md  __init__.py  confusion_matrix_detection.py  precision_recall_curve.py
legow/metrics/: README.md  __init__.py  history_metrics.py
legow/models/: README.md  dl_model.py  ensemble.py
legow/slide/: README.md  __init__.py  heatmap.py
legow/stats/: README.md  __init__.py  power_analysis.py
legow/survival_analysis/: README.md  __init__.py  survival_analysis.py
tests/: __init__.py  conftest.py  test_pkg_files.py
tests/metrics/: test_history_metrics.py
